--- a/PreSchool/Enisemo-Tolorunnimi-Result.html
+++ b/PreSchool/Enisemo-Tolorunnimi-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Enisemo-Tolorunnimi</h2><br>
                      <h2> Pre School </h2>
 
-                     <p>Continuous Assessment Scores for Term 2023/2024 </p>
+                     <p>Continuous Assessment Scores for Term First 2023/2024 </p>
 
                      <!-- Attendance Table-->
                   &nbsp;
@@ -296,7 +296,7 @@
                     </tr>
                     <tr>
                       <td>Sport</td>
-                      <td>8</td>
+                      <td></td>
                       <td></td>
                       <td></td>
                       <td></td>
@@ -483,7 +483,7 @@
                  <p>Class Teachers Comment: Tolorunnimi is a great pupil. she is always excited to learn. br></p>
                    &nbsp;
                    &nbsp;
-                   <p>Head Teachers Comment:<br></p>
+                   <p>Head Teachers Comment: This is a very good result.<br></p>
  
                    &nbsp;
                    &nbsp;                
