--- a/PreSchool/Odusanya-Jemima-Result.html
+++ b/PreSchool/Odusanya-Jemima-Result.html
@@ -92,7 +92,7 @@
                      <h2>Result for <br>Odusanya Jemima</h2><br>
                      <h2> Pre School </h2>
 
-                     <p>Continuous Assessment Scores for Term  </p>2023/2024
+                     <p>Continuous Assessment Scores for Term First 2023/2024  </p>
                      <!-- Attendance Table-->
                     &nbsp;
                     &nbsp;
