--- a/PreSchool/Okunola-Iremide-Result.html
+++ b/PreSchool/Okunola-Iremide-Result.html
@@ -92,7 +92,7 @@
                      <h2>Result for <br>Okunola Iremide</h2><br>
                      <h2> Pre School </h2>
 
-                     <p>Continuous Assessment Scores for Term 2023/2024 </p>
+                     <p>Continuous Assessment Scores for Term First 2023/2024 </p>
                      <!-- Attendance Table-->
                     &nbsp;
                     &nbsp;
