--- a/PreSchool/Oladokun-Divine-Result.html
+++ b/PreSchool/Oladokun-Divine-Result.html
@@ -92,7 +92,7 @@
                      <h2>Result for <br>Oladokun Divine</h2><br>
                      <h2> Pre School </h2>
 
-                     <p>Continuous Assessment Scores for Term 2023/2024 </p>
+                     <p>Continuous Assessment Scores for Term First 2023/2024 </p>
                      <!-- Attendance Table-->
                     &nbsp;
                     &nbsp;
@@ -111,7 +111,7 @@
                        </tr>
                        <tr>
                          <td>No. of times school opened</td>
-                         <td>121</td> 
+                         <td>118</td> 
                                         
                       </tr>
                       <tr>
@@ -478,10 +478,10 @@
                          
                        </tr>
                     </table>
-                    <p>Class Teachers Comment: An Excellent result. <br></p>
+                    <p>Class Teachers Comment: Divine is a great pupil. He is always excited to learn. <br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: Divine is a great students who is always excited to learn. <br></p>
+                     <p>Head Teachers Comment: This is an excellent performance. <br></p>
 
                      &nbsp;
                      &nbsp;
