--- a/GradeFour/Owolabi-Eniola-Result.html
+++ b/GradeFour/Owolabi-Eniola-Result.html
@@ -506,7 +506,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Eniola needs frequent reminders to stay focused through the day </p>
+                     <p>Class Teachers Comment: Eniola needs frequent reminders to stay focused throughout the day </p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: A good result </p>
