--- a/GradeOne/Okikiola-Koleade.html
+++ b/GradeOne/Okikiola-Koleade.html
@@ -105,7 +105,7 @@
                                        <div class="board">
                                           <i><img src="images/top_icon.png" alt="#"/></i>
                                           <h3>
-                                             Okikiola<br>Koleade's<br> Portal
+                                             Okikioluwa<br>Koleade's<br> Portal
                                           </h3>
                                           <!--div class="link_btn">
                                              <a class="read_more" href="Javascript:void(0)">Read More   <span></span></a>
@@ -131,7 +131,7 @@
                                              Results<br> Notes<br> Records
                                           </h3>
                                           <div class="link_btn">
-                                             <a class="read_more" href=""> Okikiola Koleade<span></span></a>
+                                             <a class="read_more" href=""> Okikioluwa Koleade<span></span></a>
                                           </div>
                                        </div>
                                     </div>
