--- a/GradeOne/Okikiola-Koleade-Result.html
+++ b/GradeOne/Okikiola-Koleade-Result.html
@@ -91,7 +91,7 @@
                   &nbsp;
                   <p>120 Akorede Layout Felele, Ibadan <br>Tel: 07053001294, 08143149947</p>
                   <div class="titlepage p1 ">
-                     <h2>Result for <br>Okikiola Koleade</h2><br>
+                     <h2>Result for <br>Okikioluwa Koleade</h2><br>
                      <h2> Grade One </h2>
 
                                       <table>
