--- a/GradeSix/Paul-Odeleye-Result.html
+++ b/GradeSix/Paul-Odeleye-Result.html
@@ -539,10 +539,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Paul is always enthusiastic in class discussions but he needs to put in more effort in his reading ability.<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment:   Paul is always enthusiastic in class discussions but he need to be more dedicated to reading.<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: Good.<br></p>
+                     <p>Head Teachers Comment:   Good.<br></p>
 
                      &nbsp;
                      &nbsp;
