--- a/GradeSix/Emmanuella-Aderibigbe-Result.html
+++ b/GradeSix/Emmanuella-Aderibigbe-Result.html
@@ -541,10 +541,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:Emmanuella has an impressive problem solving skills but she needs to pay more attention in class and talk less <br>_______________________________________________</p>
+                     <p>Class Teachers Comment:  Emmanuella has an impressive problem solving skills but she needs to pay more attention in class and talk less. <br>_______________________________________________</p>
                
                      &nbsp;
-                     <p>Head Teachers Comment:Very good.<br></p>
+                     <p>Head Teachers Comment:  Very good.<br></p>
 
                      &nbsp;
                      &nbsp;
