--- a/GradeThree/Olayemi-Aanuoluwaposimi-Result.html
+++ b/GradeThree/Olayemi-Aanuoluwaposimi-Result.html
@@ -91,7 +91,7 @@
                   &nbsp;
                   <p>120 Akorede Layout Felele, Ibadan <br>Tel: 07053001294, 08143149947</p>
                   <div class="titlepage  p1">
-                     <h2>Result for <br>Olayemi Aanuoluwaposimi</h2><br>
+                     <h2>Result for <br>Olayemi Aanuoluwanimi</h2><br>
                      <h2> Grade Three </h2>
                      <table>
                         <p>Continuous Assessment Scores for Term....  1ST TERM 2023/2024</p>
