--- a/GradeFive/Ojetola-Oluwasemilore-Result.html
+++ b/GradeFive/Ojetola-Oluwasemilore-Result.html
@@ -506,7 +506,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Semilore in-class behaviour is excellent <br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Semiloore in-class behaviour is excellent <br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment:  Very Good <br>_____________________________________________________</p>
