--- a/GradeFive/Adebayo-Mufeedah-Olansile-Result.html
+++ b/GradeFive/Adebayo-Mufeedah-Olansile-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Adebayo Mufeedah Olansile</h2><br>
                      <h2> Grade Five </h2>
                      <table>
-                        <p>Continuous Assessment Scores for Term  ..2nd Term................... </p>
+                        <p>Continuous Assessment Scores for Term  ..2nd Term 2023/2024................... </p>
                          
                         <!-- Attendance Table-->
                      &nbsp;
