--- a/GradeTwo/Adeniyi-Todimu-Result.html
+++ b/GradeTwo/Adeniyi-Todimu-Result.html
@@ -500,7 +500,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Todimu is cheerful but there is need to put in.<br> more effort in her studies._____________________________________________________</p>
+                     <p>Class Teachers Comment: Todimu is cheerful but there is need to put in<br> more effort in her studies._____________________________________________________</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: Todimu needs to take her work more seriously.<br>_____________________________________________________</p>
