--- a/GradeThree/Duruh-Osinachi-Result.html
+++ b/GradeThree/Duruh-Osinachi-Result.html
@@ -96,7 +96,7 @@
 
                      <table>
                         table>
-                        <p>Continuous Assessment Scores for Term  ....1st term 2023/2024................. </p>
+                        <p>Continuous Assessment Scores for Term  ....2nd term 2023/2024................. </p>
                          
                         <!-- Attendance Table-->
                      &nbsp;
@@ -217,8 +217,8 @@
                           <td>98</td>
                           <td>92</td>
                           <td>92</td>
-                          <td>96</td>
                           <td>93</td>
+                          <td>96</td>
                           <td>91</td>
                           <td>89</td>
                           <td>Marks Obtained</td>
