--- a/GradeOne/Motoro-Zara-Result.html
+++ b/GradeOne/Motoro-Zara-Result.html
@@ -503,7 +503,7 @@
                                                   
                                                 </tr>
                                              </table>
-                                             <p>Class Teachers Comment:Zara takes an active role in class discussion.<br>_____________________________________________________</p>
+                                             <p>Class Teachers Comment:Zara takes an active role in class discussions.<br>_____________________________________________________</p>
                                              &nbsp;
                                              &nbsp;
                                              <p>Head Teachers Comment:A very good performance, keep it up.<br>_____________________________________________________</p>
