--- a/GradeFour/Adeniba-Tofunmi-Result.html
+++ b/GradeFour/Adeniba-Tofunmi-Result.html
@@ -262,19 +262,19 @@
                         </tr>
                         
                         <tr>
-                          <td>good</td>
-                          <td>very good</td>
-                          <td>average</td>
-                          <td>average</td>
-                          <td>good</td>
-                          <td>very good</td>
-                          <td>average</td>
+                          <td>Good</td>
+                          <td>Very good</td>
+                          <td>Average</td>
+                          <td>Average</td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
                           <td>Average</td>
                           <td>Good</td>
-                          <td>fair</td>
-                          <td>very good</td>
-                          <td>good</td>
-                          <td>average</td>
+                          <td>Average</td>
+                          <td>Good</td>
+                          <td>Average</td>
+                          <td>Good</td>
+                          <td>Average</td>
                           <td></td>
                           <td>Teachers Remarks</td>                           
                         </tr>
