--- a/GradeFive/Momoh-Oluwafikayo-Result.html
+++ b/GradeFive/Momoh-Oluwafikayo-Result.html
@@ -506,7 +506,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:A good performance,Fikayo is making a commendable progress academically. C<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment:Fikayo has an independent and free spirited mind . C<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: V.Good Result <br>_____________________________________________________</p>
