--- a/GradeThree/Owolabi-Christopher-Result.html
+++ b/GradeThree/Owolabi-Christopher-Result.html
@@ -399,9 +399,9 @@
                         </tr>
                         <tr>
                           <td>Helping others</td>
-                          <td></td>
-                          <td></td>
                           <td>*</td>
+                          <td></td>
+                          <td></td>
                           <td></td>
                           
                           <td></td>
@@ -504,7 +504,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Christopher should aspire for the best result. </p>
+                     <p>Class Teachers Comment: Christopher is diligent but needs to aspire for the best result. </p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: A very good performance </p>
