--- a/GradeTwo/Adeniyi-Derek-Result.html
+++ b/GradeTwo/Adeniyi-Derek-Result.html
@@ -113,12 +113,12 @@
                             </tr>
                             <tr>
                               <td>No. of times school opened</td>
-                              <td>118</td> 
+                              <td>120</td> 
                                              
                            </tr>
                            <tr>
                               <td>No. of times present</td>
-                              <td>118</td> 
+                              <td>116</td> 
                                              
                            </tr>
                           </table>
@@ -309,8 +309,8 @@
                        </tr>
                        <tr>
                           <td>Reading</td>
-                          <td></td>
                           <td>*</td>
+                          <td></td>
                           <td></td>
                           <td></td>
                           <td></td>
@@ -505,7 +505,7 @@
                      <p>Class Teachers Comment: This is a good result.<br> _____________________________________________________</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: Keep it up.<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment: You can do better next term.<br>_____________________________________________________</p>
 
                      &nbsp;
                      &nbsp;
