--- a/PreSchool/Oladokun-Divine-Result.html
+++ b/PreSchool/Oladokun-Divine-Result.html
@@ -92,7 +92,7 @@
                      <h2>Result for <br>Oladokun Divine</h2><br>
                      <h2> Pre School </h2>
 
-                     <p>Continuous Assessment Scores for Term First 2023/2024 </p>
+                     <p>Continuous Assessment Scores for Term second 2023/2024 </p>
                      <!-- Attendance Table-->
                     &nbsp;
                     &nbsp;
@@ -111,7 +111,7 @@
                        </tr>
                        <tr>
                          <td>No. of times school opened</td>
-                         <td>118</td> 
+                         <td>120</td> 
                                         
                       </tr>
                       <tr>
@@ -160,10 +160,10 @@
                         
                         <td>1st Half</td>
                       <tr>
+                        <td>95</td>
                         <td>100</td>
-                        <td>100</td>
-                        <td>90</td>
-                        <td>90</td>
+                        <td>75</td>
+                        <td>75</td>
                         <td>85</td>
                         <td>100</td>
                         <td>100</td>
@@ -192,10 +192,10 @@
                        </tr>
                        <tr>
                          <td>100</td>
-                         <td>100</td>
-                         <td>80</td>
+                         <td>90</td>
+                         <td>90</td>
+                         <td>78</td>
                          <td>85</td>
-                         <td>95</td>
                         <td>100</td>
                         <td>100</td>
                         <td>100</td>
@@ -239,8 +239,8 @@
                          <td>Excellent</td>
                          <td>Excellent</td>
                          <td>Very good</td>
-                         <td>Very Good</td>
-                         <td>Excellent</td>
+                         <td>Good</td>
+                         <td>Very good</td>
                         <td>Excellent</td>
                         <td>Excellent</td>
                         <td>Excellent</td>
