--- a/GradeTwo/Akande-Wisdom-Result.html
+++ b/GradeTwo/Akande-Wisdom-Result.html
@@ -96,7 +96,7 @@
 
                      <table>
                         <table>
-                        <p>Continuous Assessment Scores for Term: 1St Term 2023/2024 </p>
+                        <p>Continuous Assessment Scores for Term: 2nd Term 2023/2024 </p>
                          <!-- Attendance Table-->
                          <table>                                    
                            <tr>
@@ -113,7 +113,7 @@
                             </tr>
                             <tr>
                               <td>No. of times school opened</td>
-                              <td>118</td> 
+                              <td>120</td> 
                                              
                            </tr>
                            <tr>
@@ -512,7 +512,7 @@
                        </table>
                        
                     <p> Click back on browser to go back to students profile </p> 
-                        <p>Continuous Assessment Scores for Term: 2nd Term 2023/2024 </p>
+                        <p>Continuous Assessment Scores for Term: 1st Term 2023/2024 </p>
                          <!-- Attendance Table-->
                          <table>                                    
                            <tr>
