--- a/GradeTwo/Akinbogun-Morayo-Result.html
+++ b/GradeTwo/Akinbogun-Morayo-Result.html
@@ -113,12 +113,12 @@
                             </tr>
                             <tr>
                               <td>No. of times school opened</td>
-                              <td>118</td> 
+                              <td>120</td> 
                                              
                            </tr>
                            <tr>
                               <td>No. of times present</td>
-                              <td>118</td> 
+                              <td>116</td> 
                                              
                            </tr>
                           </table>
@@ -505,7 +505,7 @@
                      <p>Class Teachers Comment: A good result.<br> _____________________________________________________</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: Keep it up.<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment: Keep it up!<br>_____________________________________________________</p>
 
                      &nbsp;
                      &nbsp;
