--- a/GradeFour/Balogun-Lilian-Result.html
+++ b/GradeFour/Balogun-Lilian-Result.html
@@ -262,19 +262,19 @@
                         </tr>
                         
                         <tr>
-                          <td>excellent</td>
-                          <td>excellent</td>
-                          <td>excellent</td>
-                          <td>excellent</td>
-                          <td>excellent</td>
-                          <td>excellent</td>
-                          <td>excellent</td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
+                          <td>Good</td>
                           <td>Very good</td>
                           <td>Very good</td>
-                          <td>very good</td>
-                          <td>excellent</td>
-                          <td>very good</td>
-                          <td>very good</td>
+                          <td>Very good</td>
+                          <td>Very good</td>
+                          <td>Very good</td>
                           <td></td>
                           <td>Teachers Remarks</td>                           
                         </tr>
@@ -506,10 +506,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Lilian is progressing nicely and shows consistent improvement in many areas of school work</p>
+                     <p>Class Teachers Comment: Lilian listens well and shares excellent ideas frequently </p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: An outstanding performance </p>
+                     <p>Head Teachers Comment: An excellent performance </p>
 
                      <table>
                         <p>Continuous Assessment Scores for Term: 1st term 2023/2024 </p>
