--- a/GradeTwo/Animashaun-Valentino-Result.html
+++ b/GradeTwo/Animashaun-Valentino-Result.html
@@ -113,7 +113,7 @@
                             </tr>
                             <tr>
                               <td>No. of times school opened</td>
-                              <td>118</td> 
+                              <td>120</td> 
                                              
                            </tr>
                            <tr>
@@ -502,7 +502,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: An good result.<br> Do not relent.</p>
+                     <p>Class Teachers Comment: Bravo!.<br> Do not relent.</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: Keep it up!.<br>_____________________________________________________</p>
