--- a/GradeTwo/Ibiyemi-Roheem-Result.html
+++ b/GradeTwo/Ibiyemi-Roheem-Result.html
@@ -509,7 +509,9 @@
 
                                              &nbsp;
                                              &nbsp;
-
+                        <table>
+                        <p>Continuous Assessment Scores for Term:1st Term 2023/2024 </p>
+                         <!-- Attendance Table-->
 
                         <tr>
                            <th colspan="16">Attendance</th>
