--- a/GradeTwo/Oladejo-Obafemi-Result.html
+++ b/GradeTwo/Oladejo-Obafemi-Result.html
@@ -112,12 +112,12 @@
                             </tr>
                             <tr>
                               <td>No. of times school opened</td>
-                              <td>118</td> 
+                              <td>120</td> 
                                              
                            </tr>
                            <tr>
                               <td>No. of times present</td>
-                              <td>116</td> 
+                              <td>114</td> 
                                              
                            </tr>
                           </table>
@@ -511,7 +511,7 @@
                                              &nbsp;
 
 
-                        <p>Continuous Assessment Scores for Term:1St Term </p>
+                        <p>Continuous Assessment Scores for Term:1St Term 2023/2024</p>
                          <!-- Attendance Table-->
                          <table>                                    
                            <tr>
