--- a/GradeTwo/Olatunji-Peace-Result.html
+++ b/GradeTwo/Olatunji-Peace-Result.html
@@ -112,12 +112,12 @@
                             </tr>
                             <tr>
                               <td>No. of times school opened</td>
-                              <td>118</td> 
+                              <td>120</td> 
                                              
                            </tr>
                            <tr>
                               <td>No. of times present</td>
-                              <td>116</td> 
+                              <td>114</td> 
                                              
                            </tr>
                           </table>
@@ -505,7 +505,7 @@
                                              <p>Class Teachers Comment: There is room for improvement.<br>_____________________________________________________</p>
                                              &nbsp;
                                              &nbsp;
-                                             <p>Head Teachers Comment: You can do it Peace.<br>_____________________________________________________</p>
+                                             <p>Head Teachers Comment: You can do better Peace.<br>_____________________________________________________</p>
 
                                              &nbsp;
                                              &nbsp;
