--- a/GradeSix/Emmanuella-Aderibigbe-Result.html
+++ b/GradeSix/Emmanuella-Aderibigbe-Result.html
@@ -297,7 +297,7 @@
                      
                         <tr>
                           <td>Excellent</td>
-                          <td>V.Good</td>
+                          <td>Good</td>
                           <td>Excellent</td>
                           <td>Excellent</td>
                           <td>Excellent</td>
@@ -309,7 +309,7 @@
                           <td>Excellent</td>
                           <td>Excellent</td>
                            <td>Excellent</td>
-                           <td>Excellent</td>
+                           <td>V.Good</td>
                            <td></td>
                           
                           <td>Teachers Remarks</td>                           
