--- a/GradeTwo/Yinka-Sobo-Tumilara-Result.html
+++ b/GradeTwo/Yinka-Sobo-Tumilara-Result.html
@@ -503,7 +503,7 @@
                                                   
                                                 </tr>
                                              </table>
-                                             <p>Class Teachers Comment: This is an excellent performance. Keep it up!<br>_____________________________________________________</p>
+                                             <p>Class Teachers Comment: This is an excellent result. Keep it up!<br>_____________________________________________________</p>
                                              &nbsp;
                                              &nbsp;
                                              <p>Head Teachers Comment: An outstanding result.<br>_____________________________________________________</p>
