--- a/PreSchool/Wahab-Abdulwahab-Result.html
+++ b/PreSchool/Wahab-Abdulwahab-Result.html
@@ -93,7 +93,7 @@
                   <div class="titlepage p1">
                      <h2>Result for <br>Wahab Abdulwahab</h2><br>
                      <h2> Pre School </h2>
-                     <p>Continuous Assessment Scores for Term ................... </p>
+                     <p>Continuous Assessment Scores for Term Second 2023/2024 </p>
                   <!-- Attendance Table-->
                   &nbsp;
                   &nbsp;
@@ -112,12 +112,12 @@
                      </tr>
                      <tr>
                        <td>No. of times school opened</td>
-                       <td></td> 
+                       <td>120</td> 
                                       
                     </tr>
                     <tr>
                        <td>No. of times present</td>
-                       <td></td> 
+                       <td>106</td> 
                                       
                     </tr>
                    </table>
