--- a/JssOne/Tileolanimi-Ogundeji-Oluwatomiwo-Result.html
+++ b/JssOne/Tileolanimi-Ogundeji-Oluwatomiwo-Result.html
@@ -143,7 +143,7 @@
                            <th>M. Science &nbsp;</th>
                            <th>CRS &nbsp;</th>
                            <th>Business Studies &nbsp;</th>
-                           <th>Creative Art &nbsp;</th>
+                           <th>Cultural and Creative Art &nbsp;</th>
                            <th>P.H.E &nbsp;</th>
                            <th>Prevocational studies &nbsp;</th>
                            <th>National value &nbsp;</th>
