--- a/GradeThree/Aikhionbare-Obaloluwa-Result.html
+++ b/GradeThree/Aikhionbare-Obaloluwa-Result.html
@@ -350,7 +350,7 @@
                          
                        </tr>
                        <tr>
-                         <td>Puntuality</td>
+                         <td>Punctuality</td>
                          <td>*</td>
                          <td></td>
                          <td></td>
