--- a/GradeThree/Gentry-Anjolaoluwa-Result.html
+++ b/GradeThree/Gentry-Anjolaoluwa-Result.html
@@ -504,7 +504,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Anjolaoluwa is confident and positive towards her academics </p>
+                     <p>Class Teachers Comment: Anjolaoluwa is confident and positive towards her academics. </p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: An excellent result. </p>
