--- a/PreSchool/Yinka-Sobo-Ogooluwa-Result.html
+++ b/PreSchool/Yinka-Sobo-Ogooluwa-Result.html
@@ -477,10 +477,10 @@
                          
                        </tr>
                     </table>
-                    <p>Class Teachers Comment: Ogooluwa is a great pupil. He is always excited to learn.<br></p>
+                    <p>Class Teachers Comment: Ogooluwa always performs excelllently academically.<br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: This is an excellent performance.<br></p>
+                     <p>Head Teachers Comment: This is a very good performance.Keepit up<br></p>
 
                      &nbsp;
                      &nbsp;
