--- a/GradeThree/Obasa-Omolola-Result.html
+++ b/GradeThree/Obasa-Omolola-Result.html
@@ -508,7 +508,7 @@
                      <p>Class Teachers Comment: Omolola is improving in her studies. </p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: A very good performance </p>
+                     <p>Head Teachers Comment: A very good performance. </p>
 
                      &nbsp;
                      &nbsp;
