--- a/GradeThree/Olayemi-Aanuoluwaposimi-Result.html
+++ b/GradeThree/Olayemi-Aanuoluwaposimi-Result.html
@@ -507,7 +507,7 @@
                      <p>Class Teachers Comment: Aanuoluwanimi is brilliant and always looks for ways to be helpful in class. </p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: A very good performance </p>
+                     <p>Head Teachers Comment: A very good performance. </p>
 
                      &nbsp;
                      &nbsp;
