--- a/GradeThree/Oshunkoya-Oba-Enoch-Result.html
+++ b/GradeThree/Oshunkoya-Oba-Enoch-Result.html
@@ -507,7 +507,7 @@
                      <p>Class Teachers Comment: Enoch is brilliant and hardworking.</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: A very good performance </p>
+                     <p>Head Teachers Comment: A very good performance. </p>
 
                      &nbsp;
                      &nbsp;
