--- a/GradeThree/Owolabi-Christopher-Result.html
+++ b/GradeThree/Owolabi-Christopher-Result.html
@@ -115,12 +115,12 @@
                         </tr>
                         <tr>
                           <td>No. of times school opened</td>
-                          <td>118</td> 
+                          <td>120</td> 
                                          
                        </tr>
                        <tr>
                           <td>No. of times present</td>
-                          <td>102</td> 
+                          <td>120</td> 
                                          
                        </tr>
                       </table>
@@ -507,7 +507,7 @@
                      <p>Class Teachers Comment: Christopher is diligent but needs to aspire for the best result. </p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: A very good performance </p>
+                     <p>Head Teachers Comment: A very good performance. </p>
 
                      &nbsp;
                      &nbsp;
