--- a/PreSchool/Oladipupo-Fikunremi-Result.html
+++ b/PreSchool/Oladipupo-Fikunremi-Result.html
@@ -136,6 +136,10 @@
                           <th>Handwriting</th>
                           <th>Creative Art</th>
                           <th>Computer</th>
+                          <th>French</th>
+                          <th>General Paper</th>
+                          <th>CRS</th>
+                          <th>Montessori Science</th>
                          
                         </tr>
                         <tr>
@@ -154,6 +158,10 @@
                            <td>1st Half</td>
                          </tr>
                         <tr>
+                          <td></td>
+                          <td></td>
+                          <td></td>
+                          <td></td>
                           <td></td>
                           <td></td>
                           <td></td>
