--- a/PreSchool/Adeyemo-Matthew-Result.html
+++ b/PreSchool/Adeyemo-Matthew-Result.html
@@ -476,10 +476,10 @@
                            
                          </tr>
                       </table>
-                      <p>Class Teachers Comment: This is a promising start in the preschool class. <br></p>
+                      <p>Class Teachers Comment: An excellent result. You are making great strides. <br></p>
                         &nbsp;
                         &nbsp;
-                        <p>Head Teachers Comment: This is a very good result. <br></p>
+                        <p>Head Teachers Comment: An excellent result. Keep it up. <br></p>
 
                         &nbsp;
                         &nbsp;       
