--- a/PreSchool/Akinpelu-Tobiloba-Result.html
+++ b/PreSchool/Akinpelu-Tobiloba-Result.html
@@ -450,7 +450,7 @@
                      
                    </tr>
                 </table>
-                <p>Class Teachers Comment: Tobi is a great pupil. He is excited to learn. <br></p>
+                <p>Class Teachers Comment: An excellent work. Keep aiming high and shinning bright. <br></p>
                   &nbsp;
                   &nbsp;
                   <p>Head Teachers Comment: This is an excellent result. <br></p>
