--- a/PreSchool/Animashaun-Fiirekunolami-Result.html
+++ b/PreSchool/Animashaun-Fiirekunolami-Result.html
@@ -92,7 +92,7 @@
                   <p>120 Akorede Layout Felele, Ibadan <br>Tel: 07053001294, 08143149947</p>
                   <div class="titlepage p1 ">
                       <h2>Result for <br>Animashaun Fiirekunolami</h2><br>
-                     <p>Continuous Assessment Scores for Term First 2023/2024 </p>
+                     <p>Continuous Assessment Scores for Term Second 2023/2024 </p>
                      <!-- Attendance Table-->
                     &nbsp;
                     &nbsp;
@@ -334,8 +334,8 @@
                      </tr>
                      <tr>
                         <td>Neatness</td>
-                        <td>*</td>
                         <td></td>
+                        <td>*</td>
                         <td></td>
                         <td></td>
                         
@@ -479,10 +479,10 @@
                         
                       </tr>
                    </table>
-                   <p>Class Teachers Comment: Fiirekunolami needs to show more enthusiasm towards learning. <br></p>
+                   <p>Class Teachers Comment: This is a very good result. <br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: This is a very good result.<br></p>
+                     <p>Head Teachers Comment: This is a very good report. Keep it up.<br></p>
 
                      &nbsp;
                      &nbsp;                
