--- a/PreSchool/Asake-Mololuwa-Result.html
+++ b/PreSchool/Asake-Mololuwa-Result.html
@@ -479,10 +479,10 @@
                      
                    </tr>
                 </table>
-                <p>Class Teachers Comment: Mololuwa is a great pupil. He is always excited to learn. <br></p>
+                <p>Class Teachers Comment: Impressuve result.Mololuwa, keep shinning <br></p>
                   &nbsp;
                   &nbsp;
-                  <p>Head Teachers Comment: This is a very good result. <br></p>l
+                  <p>Head Teachers Comment: This is a very good performance. <br></p>l
                   &nbsp;
                   &nbsp;                
                 
