--- a/PreSchool/Ayoola-Jason-Result.html
+++ b/PreSchool/Ayoola-Jason-Result.html
@@ -287,7 +287,7 @@
                         <td>Reading</td>
                         <td></td>
                         <td></td>
-                        <td></td>
+                        <td>*</td>
                         <td></td>
                         <td></td>
                         
@@ -478,10 +478,10 @@
                         
                       </tr>
                    </table>
-                   <p>Class Teachers Comment: Jason has shown tremendous improverment this term. We are happy to have him in the preschool class.</p>
+                   <p>Class Teachers Comment: Jason has made a steady progress this term.</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: This is a very good result. <br></p>
+                     <p>Head Teachers Comment: This is a very good performance. <br></p>
 
                      &nbsp;
                      &nbsp;                
