--- a/PreSchool/Bello-Tiwadola-Result.html
+++ b/PreSchool/Bello-Tiwadola-Result.html
@@ -404,7 +404,7 @@
                       </tr>
                       <tr>
                         <td>Attitude to class work</td>
-                        <td></td>
+                        <td>*</td>
                         <td></td>
                         <td></td>
                         <td></td>
@@ -479,10 +479,10 @@
                         
                       </tr>
                    </table>
-                   <p>Class Teachers Comment: This is a promising start in the preschool class.<br></p>
+                   <p>Class Teachers Comment: This is a very good performance.<br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: This is a very good result. <br></p>
+                     <p>Head Teachers Comment: A very good result.Keep it up. <br></p>
 
                      &nbsp;
                      &nbsp;                
