--- a/PreSchool/Boyejo-Daniel-Result.html
+++ b/PreSchool/Boyejo-Daniel-Result.html
@@ -288,7 +288,7 @@
                         <td>Reading</td>
                         <td></td>
                         <td></td>
-                        <td></td>
+                        <td>*</td>
                         <td></td>
                         <td></td>
                         
@@ -479,10 +479,10 @@
                         
                       </tr>
                    </table>
-                   <p>Class Teachers Comment: Daniel is a great pupil. He is always excited to learn.<br></p>
+                   <p>Class Teachers Comment: Daniel has positive attitude towards learning.<br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: This is a very good result.<br> Welcome to preschool class.</p>
+                     <p>Head Teachers Comment: This is a very good performance.<br></p>
 
                      &nbsp;
                      &nbsp;                
