--- a/PreSchool/Ede-Ryan-Result.html
+++ b/PreSchool/Ede-Ryan-Result.html
@@ -288,7 +288,7 @@
                         <td>Reading</td>
                         <td></td>
                         <td></td>
-                        <td></td>
+                        <td>*</td>
                         <td></td>
                         <td></td>
                         
@@ -479,10 +479,10 @@
                         
                       </tr>
                    </table>
-                   <p>Class Teachers Comment: Ryan perform excellently academically but needs to be more vocal.<br></p>
+                   <p>Class Teachers Comment: This is a good result. Keep working very hard.<br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: This is a very good result.<br></p>
+                     <p>Head Teachers Comment: This is a  good performance.<br></p>
 
                      &nbsp;
                      &nbsp;                
