--- a/PreSchool/Enisemo-Tolorunnimi-Result.html
+++ b/PreSchool/Enisemo-Tolorunnimi-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Enisemo-Tolorunnimi</h2><br>
                      <h2> Pre School </h2>
 
-                     <p>Continuous Assessment Scores for Term First 2023/2024 </p>
+                     <p>Continuous Assessment Scores for Term Second 2023/2024 </p>
 
                      <!-- Attendance Table-->
                   &nbsp;
@@ -297,7 +297,7 @@
                     <tr>
                       <td>Sport</td>
                       <td></td>
-                      <td></td>
+                      <td>*</td>
                       <td></td>
                       <td></td>
                       <td></td>
@@ -480,10 +480,10 @@
                       
                     </tr>
                  </table>
-                 <p>Class Teachers Comment: Tolorunnimi is a great pupil. she is always excited to learn. br></p>
+                 <p>Class Teachers Comment: An excellent result. Keep up the fantastic effort and aim for the stars. br></p>
                    &nbsp;
                    &nbsp;
-                   <p>Head Teachers Comment: This is a very good result.<br></p>
+                   <p>Head Teachers Comment: This is a very good performance.<br></p>
  
                    &nbsp;
                    &nbsp;                
