--- a/PreSchool/Fakayode-Adesewa-Result.html
+++ b/PreSchool/Fakayode-Adesewa-Result.html
@@ -479,10 +479,10 @@
                         
                       </tr>
                    </table>
-                   <p>Class Teachers Comment: Adesewa is a great pupil. she is always excited to learn.<br></p>
+                   <p>Class Teachers Comment: This is an excellen result. Keep challenging yourself.<br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: This is an excellent result. <br></p>
+                     <p>Head Teachers Comment: This is an excellent performance. <br></p>
 
                      &nbsp;
                      &nbsp;               
