--- a/PreSchool/Gentry-Anfelaoluwa-Result.html
+++ b/PreSchool/Gentry-Anfelaoluwa-Result.html
@@ -287,7 +287,7 @@
                          <td>Reading</td>
                          <td></td>
                          <td></td>
-                         <td></td>
+                         <td>*</td>
                          <td></td>
                          <td></td>
                          
@@ -478,10 +478,10 @@
                          
                        </tr>
                     </table>
-                    <p>Class Teachers Comment: Anfelaoluwa has shown significant improverment but he needs to be more enthusiastic towards learning.<br></p>
+                    <p>Class Teachers Comment: Anfelaoluwa needs to keep challenging himself.<br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: This is a very good result. Welcome to preschool.<br></p>
+                     <p>Head Teachers Comment: This is a very good performance<br></p>
 
                      &nbsp;
                      &nbsp;    
