--- a/PreSchool/Iremide-Okunola-Result.html
+++ b/PreSchool/Iremide-Okunola-Result.html
@@ -477,7 +477,7 @@
                            
                          </tr>
                       </table>
-                      <p>Class Teachers Comment: Iremide has potentials to do better but she needs to be more enthusiastic towards learning.<br></p>
+                      <p>Class Teachers Comment:Good effort. Keep working hard. .<br></p>
                         &nbsp;
                         &nbsp;
                         <p>Head Teachers Comment: This is a good result but she needs to work harder next term.<br></p>
