--- a/PreSchool/Kayode-Tantoluwa-Result.html
+++ b/PreSchool/Kayode-Tantoluwa-Result.html
@@ -479,10 +479,10 @@
                          
                        </tr>
                     </table>
-                    <p>Class Teachers Comment: Tantoluwa is a great pupil. He is always excited to learn. <br></p>
+                    <p>Class Teachers Comment: This is a fantastic performance.Keep soaring high. <br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: This is an excellent result.<br></p>
+                     <p>Head Teachers Comment: A very gpod performance. Keep it up.<br></p>
 
                      &nbsp;
                      &nbsp;
