--- a/PreSchool/Mogaji-Damilola-Result.html
+++ b/PreSchool/Mogaji-Damilola-Result.html
@@ -478,10 +478,10 @@
                          
                        </tr>
                     </table>
-                    <p>Class Teachers Comment: Damilola has potentials to do better but she needs to be more cooperative with her teachers. <br></p>
+                    <p>Class Teachers Comment: This is a very good result.Keep working very hard. <br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: This is a very good result.<br></p>
+                     <p>Head Teachers Comment: This is a very good performance..<br></p>
 
                      &nbsp;
                      &nbsp;  
