--- a/PreSchool/Odusanya-Jemima-Result.html
+++ b/PreSchool/Odusanya-Jemima-Result.html
@@ -478,10 +478,10 @@
                          
                        </tr>
                     </table>
-                    <p>Class Teachers Comment:Jemima is a great pupil.She is always excited to learn. <br></p>
+                    <p>Class Teachers Comment:This is an excellent result.Keep soaring high. <br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: This is a very good result.<br></p>
+                     <p>Head Teachers Comment: An excellent performance.Keep it up.<br></p>
 
                      &nbsp;
                      &nbsp;  
