--- a/PreSchool/Ogundairo-Omotade-Result.html
+++ b/PreSchool/Ogundairo-Omotade-Result.html
@@ -478,10 +478,10 @@
                          
                        </tr>
                     </table>
-                    <p>Class Teachers Comment:Omotade needs to show more enthusiasm towards learning. <br></p>
+                    <p>Class Teachers Comment:This is a very good result.Keep up the good effort. <br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:This is a good result. <br></p>
+                     <p>Head Teachers Comment:A very good performance. <br></p>
 
                      &nbsp;
                      &nbsp;  
