--- a/PreSchool/Okunola-Iremide-Result.html
+++ b/PreSchool/Okunola-Iremide-Result.html
@@ -478,7 +478,7 @@
                          
                        </tr>
                     </table>
-                    <p>Class Teachers Comment: Iremide has potentials to do better but she has to be more enthusiastic towards learning.<br></p>
+                    <p>Class Teachers Comment: Good effort.Keep working hard.<br></p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: >This is a good result.</p>
